--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 </head>
 
 <body>
-    <div class="header">
+    <!-- Changed div tag to header. -->
+    <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
+        <!-- Changed div tag to nav. -->
+        <nav>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -22,8 +24,9 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </div>
-    </div>
+        </nav>
+    </header>
+    <!-- Changed div tag to figure. -->
     <figure class="hero"></figure>
     <div class="content">
         <div class="search-engine-optimization">
