--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <title>Horiseon</title>
 </head>
 
 <body>
@@ -13,7 +13,7 @@
         <h1>Hori<span class="seo">seo</span>n</h1>
         <!-- Changed div tag to nav. -->
         <nav>
-            <ul>
+            <ol>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
                 </li>
@@ -23,7 +23,7 @@
                 <li>
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
-            </ul>
+            </ol>
         </nav>
     </header>
     <!-- Changed div tag to figure. -->
